# receptiviti-python

./: .gitattributes  .gitignore  .prettierignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs/CHANGELOG/: index.html
docs/articles/commencement_example/: index.html
docs/articles/high_volume/: index.html
docs/articles/quick_start/: index.html
docs/articles/special_cases/: index.html
docs/coverage/: class_index.html  d_4909b636852450bb___init___py.html  d_4909b636852450bb_frameworks_py.html  d_4909b636852450bb_readin_env_py.html  d_4909b636852450bb_request_py.html  d_4909b636852450bb_status_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_norming_py.html  d_a44f0ac069e85531_test_readin_env_py.html  d_a44f0ac069e85531_test_request_py.html  d_a44f0ac069e85531_test_status_py.html  function_index.html  index.html  status.json  z_4909b636852450bb_frameworks_py.html  z_4909b636852450bb_manage_request_py.html  z_4909b636852450bb_norming_py.html  z_4909b636852450bb_readin_env_py.html  z_4909b636852450bb_request_py.html  z_4909b636852450bb_status_py.html  z_a44f0ac069e85531_test_frameworks_py.html  z_a44f0ac069e85531_test_norming_py.html  z_a44f0ac069e85531_test_readin_env_py.html  z_a44f0ac069e85531_test_request_py.html  z_a44f0ac069e85531_test_status_py.html
docs/functions/frameworks/: index.html
docs/functions/norming/: index.html
docs/functions/readin_env/: index.html
docs/functions/request/: index.html
docs/functions/status/: index.html
docs/search/: search_index.json
docs/v/0.1.0/: sitemap.xml
docs/v/0.1.0/coverage/: d_a44f0ac069e85531_test_status_py.html  index.html
docs/v/0.1.1/coverage/: d_a44f0ac069e85531_test_status_py.html
docs/v/0.1.1/functions/request/: index.html
docs/v/0.1.2/: index.html
docs/v/0.1.2/coverage/: d_4909b636852450bb_status_py.html
docs/v/0.1.2/functions/readin_env/: index.html
docs/v/0.1.2/search/: search_index.json
docs/v/0.2.0/articles/files/: file1.txt
docs/v/0.2.0/articles/quick_start/: index.html
docs/v/0.2.0/search/: search_index.json
docs/v/0.2.1/coverage/: class_index.html  d_4909b636852450bb_manage_request_py.html  index.html
docs/v/0.2.1/functions/request/: index.html
docs/v/0.2.1/stylesheets/: extra.css
docs/v/dev/: 404.html  index.html  sitemap.xml
docs/v/dev/CHANGELOG/: index.html
docs/v/dev/coverage/: class_index.html  d_a44f0ac069e85531_test_frameworks_py.html  function_index.html  index.html  status.json  z_4909b636852450bb_frameworks_py.html  z_4909b636852450bb_manage_request_py.html  z_4909b636852450bb_norming_py.html  z_4909b636852450bb_request_py.html  z_4909b636852450bb_status_py.html  z_a44f0ac069e85531_test_frameworks_py.html  z_a44f0ac069e85531_test_norming_py.html  z_a44f0ac069e85531_test_status_py.html
docs/v/dev/search/: search_index.json
docs_source/: CHANGELOG.md  README.md
docs_source/articles/: commencement_example.md  high_volume.md  quick_start.md  special_cases.md
docs_source/articles/files/: file.csv
docs_source/functions/: frameworks.md  norming.md  readin_env.md  request.md  status.md
docs_source/v/0.1.0/: 404.html  index.html
docs_source/v/0.1.0/coverage/: d_4909b636852450bb_readin_env_py.html  d_4909b636852450bb_request_py.html  d_a44f0ac069e85531_test_readin_env_py.html  d_a44f0ac069e85531_test_request_py.html
docs_source/v/0.1.1/: 404.html
docs_source/v/0.1.1/CHANGELOG/: index.html
docs_source/v/0.1.1/coverage/: d_4909b636852450bb_readin_env_py.html
docs_source/v/0.1.2/: sitemap.xml
docs_source/v/0.1.2/search/: search_index.json
docs_source/v/0.2.0/: sitemap.xml
docs_source/v/0.2.0/coverage/: d_4909b636852450bb_norming_py.html  d_4909b636852450bb_status_py.html  d_a44f0ac069e85531_test_status_py.html  index.html  z_4909b636852450bb_manage_request_py.html  z_a44f0ac069e85531_test_readin_env_py.html
docs_source/v/0.2.1/: sitemap.xml
docs_source/v/0.2.1/coverage/: z_4909b636852450bb_frameworks_py.html
src/receptiviti/: __about__.py  __init__.py  frameworks.py  manage_request.py  norming.py  readin_env.py  request.py  status.py
tests/: __init__.py  test_frameworks.py  test_norming.py  test_readin_env.py  test_request.py  test_status.py
(+39 files in other folders)
